--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<main>
+	<div class="moviePic">
+	<img src="https://th.bing.com/th/id/R.9bd59b3fad4eb6e6fbe6bea10302af65?rik=UeQHJI%2bNf1j5%2bg&riu=http%3a%2f%2fimages2.fanpop.com%2fimages%2fphotos%2f7400000%2fHarry-Potter-posters-harry-potter-7450483-1813-2560.jpg&ehk=llnc9RfDjBXGeJnEwbwJSXtMN1i5guAFEdRrblJAsAE%3d&risl=&pid=ImgRaw&r=0" alt="movie poster" width="200">
+	</div>
+	
+	<div class="movieDetail">
+		<p>An orphaned boy enrolls in a school of wizardry, where he learns the truth about himself, his family and the terrible evil that haunts the magical world.</p>		
+	</div>	
+</main>
 </body>
-
 </html>
